--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
    <meta charset="utf-8">
-   <title>Reaktor Assignment</title>
+   <title>Reaktor 2019</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
    <link rel="stylesheet" href="interface/styles.css" type="text/css">
    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -8,4 +8,12 @@
    <script defer src="core/bundle.js"></script>
 </head>
 <body>
+   <div id="wrapper">
+      <div id="options-header">Select a Country or Region</div>
+      <div id="options-body">
+         <img src="interface/img/arrow.png" id="arrow">
+         <div id="options"></div>
+      </div>
+      <div id="chart"></div>
+   </div>
 </body>
