--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 </head>
 <body>
    <div id="wrapper">
-      <div id="options-header">Select a Country or Region</div>
-      <div id="options-body">
-         <img src="interface/img/arrow.png" id="arrow">
-         <div id="options"></div>
+      <div id="menu">
+         <div id="options"><div id="inner"></div></div>
       </div>
-      <div id="chart"></div>
+      <div id="innerbody">
+         <div id="population">
+            <div id="header"><div id="inner">Population for <span id="country"></span></div></div>
+            <div id="content"><div id="inner"><div id="chart"></div></div></div>
+         </div>
+         <div id="emission">
+            <div id="header"><div id="inner">Emission for <span id="country"></span></div></div>
+            <div id="content"><div id="inner"><div id="chart"></div></div></div>
+         </div>
+      </div>
    </div>
 </body>
