Added blacklist & single chart view

--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
          <div id="options"><div id="inner"></div></div>
       </div>
       <div id="innerbody">
-         <div id="population">
-            <div id="header"><div id="inner">Population for <span id="country"></span></div></div>
-            <div id="content"><div id="inner"><div id="chart"></div></div></div>
-         </div>
-         <div id="emission">
-            <div id="header"><div id="inner">Emission for <span id="country"></span></div></div>
+         <div id="chart-tbl">
+            <div id="header"><div id="inner">Population and CO2 Emissions for <span id="target"></span></div></div>
             <div id="content"><div id="inner"><div id="chart"></div></div></div>
          </div>
       </div>
