Changed design structure to 2.0

--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
 </head>
 <body>
    <div id="wrapper">
-      <div id="menu">
-         <div id="options"><div id="inner"></div></div>
+      <div id="settings">
+         <span id="regions" class="inactive">Remove Regions</span><span id="capita" class="inactive">Per Capita</span><span id="highlow" class="inactive">Lowest First</span>
       </div>
-      <div id="innerbody">
-         <div id="chart-tbl">
-            <div id="header"><div id="inner">Population and CO2 Emissions for <span id="target"></span></div></div>
-            <div id="content"><div id="inner"><div id="chart"></div></div></div>
-         </div>
-      </div>
+      <input type="text" placeholder="Select Country">
+      <div id="options"></div>
    </div>
 </body>
