Added click functionality to dropdowns & filtering

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="settings">
          <span id="regions" class="inactive">Remove Regions</span><span id="capita" class="inactive">Per Capita</span><span id="highlow" class="inactive">Lowest First</span>
       </div>
-      <input type="text" placeholder="Select Country">
-      <div id="options"></div>
+      <input type="text" placeholder="Select Country" id="primary-search">
+      <div id="primary-options"></div>
    </div>
 </body>
