Started with chart tweaking

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       </div>
       <input type="text" placeholder="Select Country" id="primary-search">
       <div id="primary-options"></div>
+      <div id="primary-chart"></div>
    </div>
 </body>
